front end markup fixes

--- a/src/app/components/spider-chart/spider-chart.component.html
+++ b/src/app/components/spider-chart/spider-chart.component.html
@@ -1,3 +1,4 @@
-<div [ngClass]="{'container': withBorder}">
+<!-- <div [ngClass]="{'container': withBorder}">
   <canvas baseChart [data]="spiderData" [options]="spiderChartOptions" [type]="spiderChartType"> </canvas>
-</div>
+</div> -->
+<canvas baseChart [data]="spiderData" [options]="spiderChartOptions" [type]="spiderChartType"> </canvas>
