--- a/src/app/documents/single-category/single-category.component.scss
+++ b/src/app/documents/single-category/single-category.component.scss
@@ -249,23 +249,21 @@
       padding-bottom: 0 !important;
     }
 
-    input[type="text"] {
-      padding: 15px;
-      // border: 1px solid rgba($color: #000000, $alpha: 0.1);
-      box-shadow: inset 0 0 0 1px rgba($color: #000000, $alpha: 0.1);
-      border-radius: 5px;
-      // width: 40%;
-      flex: 1;
-    }
+    // input[type="text"] {
+    //   padding: 15px;
+    //   box-shadow: inset 0 0 0 1px rgba($color: #000000, $alpha: 0.1);
+    //   border-radius: 5px;
+    //   flex: 1;
+    // }
 
-    input[type="text"]:focus {
-      box-shadow: inset 0 0 0 2px #00031d;
-    }
+    // input[type="text"]:focus {
+    //   box-shadow: inset 0 0 0 2px #00031d;
+    // }
 
-    input[type="text"]:disabled {
-      cursor: not-allowed;
-      opacity: 0.7;
-    }
+    // input[type="text"]:disabled {
+    //   cursor: not-allowed;
+    //   opacity: 0.7;
+    // }
   }
 
   .empty-subs {
