--- a/src/app/public-documents/components/testimonials/testimonials.component.scss
+++ b/src/app/public-documents/components/testimonials/testimonials.component.scss
@@ -1,22 +1,31 @@
 :host {
+  .emptyhldr {
+    .ctrls {
+      margin-top: 20px;
+    }
+  }
+
   .testimonials {
     width: 100%;
     overflow: auto;
-    //   background-color: orange;
+
     mat-icon {
       font-size: 70pt;
       color: rgba($color: #000000, $alpha: 0.1);
     }
+
     .title-card {
       font-size: 13pt;
       font-weight: 700;
     }
+
     .title {
       margin: 0;
       font-size: 11pt;
       font-weight: 500;
       text-align: left;
     }
+
     .description {
       margin: 10px 0px;
       font-size: 12pt;
@@ -33,13 +42,16 @@
       &::-webkit-scrollbar {
         width: 7px;
       }
+
       &::-webkit-scrollbar-track {
         background: #d9d9d9;
       }
+
       &::-webkit-scrollbar-thumb {
         background: #bcbcbc;
         border-radius: 5px;
       }
+
       &::-webkit-scrollbar-thumb:hover {
         background: #a5a5a5;
       }
@@ -75,6 +87,7 @@
             align-items: center;
             margin: 0;
             margin-top: 10pt;
+
             .avatar {
               margin: 0;
               width: 18pt;
