--- a/src/app/public-documents/components/top10-list/top10-list.component.html
+++ b/src/app/public-documents/components/top10-list/top10-list.component.html
@@ -1,9 +1,14 @@
-<mat-list class="container shadow">
-  <p class="title">Top 10 Soluciones</p>
-  <mat-list-item *ngFor="let item of data">
+<!-- <mat-list class="container shadow"> -->
+<div class="set 12 head-titles">
+  <span>Top 10 Soluciones</span>
+  <div class="line"></div>
+</div>
+
+<div class="set-12 itemlist">
+  <div class="set-12 item" *ngFor="let item of data">
     <span mat-line>
       <div mat-line>
-        <button type="button" class="name" (click)="linkMe(item.url)">
+        <button type="button" class="linker" (click)="linkMe(item.url)">
           {{ item.title }}
         </button>
       </div>
@@ -12,5 +17,6 @@
       matTooltipPosition="right">
       <div id="progress" class="progress" [style.width.%]="item.stats.score"></div>
     </div>
-  </mat-list-item>
-</mat-list>
+  </div>
+</div>
+<!-- </mat-list> -->
