--- a/src/app/public-documents/components/top10-list/top10-list.component.scss
+++ b/src/app/public-documents/components/top10-list/top10-list.component.scss
@@ -12,21 +12,28 @@
     border-radius: 5px;
     width: 100%;
     height: 100%;
-  }
-
-  .container {
     margin: 0;
     padding: 25px 10px;
+  }
 
-    .title {
-      padding-left: 15px;
-      font-weight: 700;
-      font-size: 18px;
+  .itemlist {
+    margin-top: 20px;
+
+    .item {
+      margin-bottom: 15px;
     }
 
-    .name {
-      font-size: 14px;
+    .item:last-child {
+      margin-bottom: 0;
     }
+  }
+
+  .linker {
+    transition: all .2s linear;
+  }
+
+  .linker:hover {
+    color: #20C588;
   }
 
   .progress-bar {
@@ -35,6 +42,8 @@
     height: 10px;
     cursor: pointer;
     margin-top: 5px !important;
+    border-radius: 5px;
+    overflow: hidden;
   }
 
   .progress {
