--- a/src/app/public-documents/public/public.component.scss
+++ b/src/app/public-documents/public/public.component.scss
@@ -5,6 +5,16 @@
   width: 100%;
   height: auto;
 
+  .col-rgt {
+    mat-card {
+      padding: 0;
+    }
+  }
+
+  .dataViewport {
+    padding: 0 20px 20px 20px;
+  }
+
   .select>select {
     background-color: white;
     width: 150px;
