--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -2,143 +2,155 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<div class="container" *ngIf="isDataAvailable">
-  <div class="container">
-    <div class="set-10">
-      <breadcrumbs-component>
-        <li>...</li>
-        <li [matTooltip]="document.title" matTooltipClass="tooltip" (click)="
-            utilityService.linkMe('/documentos-publicos/' + document._id)
-          ">
-          <!-- {{ document.title }} -->
-          ...
-        </li>
-        <li [matTooltip]="category.category.name" matTooltipClass="tooltip" (click)="
-            utilityService.linkMe(
-              '/documentos-publicos/' +
-                document._id +
-                '/categoria/' +
-                category._id
-            )
-          ">
-          ...
-          <!-- {{ category.category.name }} -->
-        </li>
-        <li [matTooltip]="subcategory.category.name" matTooltipClass="tooltip" (click)="
-            utilityService.linkMe(
-              '/documentos-publicos/' +
-                document._id +
-                '/categoria/' +
-                category._id +
-                '/subcategoria/' +
-                subcategory._id
-            )
-          ">
-          {{ subcategory.category.name }}
-        </li>
-        <li [matTooltip]="topic.title" matTooltipClass="tooltip" (click)="
-            utilityService.linkMe(
-              '/documentos-publicos/' +
-                document._id +
-                '/categoria/' +
-                category._id +
-                '/subcategoria/' +
-                subcategory._id +
-                '/tema/' +
-                topic._id
-            )
-          ">
-          {{ topic.shortTitle }}
-        </li>
-        <li [matTooltip]="solution.title" matTooltipClass="tooltip">
-          {{ solution.shortTitle }}
-        </li>
-      </breadcrumbs-component>
-    </div>
-    <!-- <div class="set-3 featured-users">
-      <featured-users [inputAmount]="3"></featured-users>
-    </div> -->
+<div class="set-12" *ngIf="isDataAvailable">
+  <div class="set-12">
+    <breadcrumbs-component>
+      <li>...</li>
+      <li [matTooltip]="document.title" matTooltipClass="tooltip" (click)="
+          utilityService.linkMe('/documentos-publicos/' + document._id)
+        ">
+        <!-- {{ document.title }} -->
+        ...
+      </li>
+      <li [matTooltip]="category.category.name" matTooltipClass="tooltip" (click)="
+          utilityService.linkMe(
+            '/documentos-publicos/' +
+              document._id +
+              '/categoria/' +
+              category._id
+          )
+        ">
+        ...
+        <!-- {{ category.category.name }} -->
+      </li>
+      <li [matTooltip]="subcategory.category.name" matTooltipClass="tooltip" (click)="
+          utilityService.linkMe(
+            '/documentos-publicos/' +
+              document._id +
+              '/categoria/' +
+              category._id +
+              '/subcategoria/' +
+              subcategory._id
+          )
+        ">
+        {{ subcategory.category.name }}
+      </li>
+      <li [matTooltip]="topic.title" matTooltipClass="tooltip" (click)="
+          utilityService.linkMe(
+            '/documentos-publicos/' +
+              document._id +
+              '/categoria/' +
+              category._id +
+              '/subcategoria/' +
+              subcategory._id +
+              '/tema/' +
+              topic._id
+          )
+        ">
+        {{ topic.shortTitle }}
+      </li>
+      <li [matTooltip]="solution.title" matTooltipClass="tooltip">
+        {{ solution.shortTitle }}
+      </li>
+    </breadcrumbs-component>
+  </div>
+  <!-- <div class="set-3 featured-users">
+    <featured-users [inputAmount]="3"></featured-users>
+  </div> -->
 
-    <div class="set-2 txt-center">
-      <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Comentario"
-        (click)="popAddCommentsDialog()">
-        <mat-icon>add_comment</mat-icon>
-      </button>
-      <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Testimonio"
-        (click)="openModalTestimony()">
-        <mat-icon>book</mat-icon>
-      </button>
-    </div>
-    <div class="set-12 txt-left" style="margin-bottom: 10px">
-      <span class="created-by">
-        Autor:
-        <span class="author">{{ solution.createdBy.firstname }}
-          {{ solution.createdBy.lastname }}</span>
-      </span>
-    </div>
-    <div class="set-12" style="padding-bottom: 100px">
-      <div class="set-8 col-rgt-3">
-        <div class="set-12 header-card">
-          <mat-card>
-            <!-- IMAGE -->
-            <div class="set-12 image-box imghldr">
-              <mat-icon *ngIf="!image">panorama</mat-icon>
-              <img *ngIf="image" [src]="image" style="cursor: pointer" (click)="popImageViewer()" />
-              <div class="info">
-                <div class="actions">
+  <!-- <div class="set-2 txt-center">
+    <button type="button" mat-mini-fab color="primary" class="mini" matTooltip="Agregar Comentario"
+      (click)="popAddCommentsDialog()">
+      <mat-icon>add_comment</mat-icon>
+    </button>
+    <button type="button" mat-mini-fab color="warn" class="mini" matTooltip="Agregar Testimonio"
+      (click)="openModalTestimony()">
+      <mat-icon>book</mat-icon>
+    </button>
+  </div> -->
+
+  <div class="set-12 txt-left" style="margin-bottom: 10px">
+    <span class="created-by">
+      Autor:
+      <span class="author">{{ solution.createdBy.firstname }}
+        {{ solution.createdBy.lastname }}</span>
+    </span>
+  </div>
+
+  <div class="set-12">
+    <div class="set-8 col-rgt-3">
+      <mat-card>
+        <div class="set-12 card-desc">
+          <div class="set-12 imghldr">
+            <!-- <mat-icon *ngIf="!image">panorama</mat-icon>
+            <img *ngIf="image" [src]="image" style="cursor: pointer" (click)="popImageViewer()" /> -->
+
+            <div class="info">
+              <div class="actions">
+                <div class="set-12">
                   <p>Relevancia ciudadana</p>
                   <p class="votes">{{ stats.score }} / 100</p>
-                  <button *ngIf="userVoted" mat-raised-button color="primary" disabled
-                    style="background-color: #d9d9d9">
-                    Votos: {{ votes }}
+                </div>
+
+                <div class="set-12 vote-status" *ngIf="userVoted">
+                  Votos: {{ votes }}
+                </div>
+
+                <div class="set-12 vote-status">
+                  <button *ngIf="!userVoted" mat-raised-button color="accent" (click)="openModalVote()">
+                    <strong>Votar</strong>
                   </button>
-                  <button *ngIf="!userVoted" mat-raised-button color="black" style="
-                      background-color: #71f5ad;
-                      font-weight: 600;
-                      font-size: 16px;
-                    " (click)="openModalVote()">
-                    Votar
-                  </button>
+                  <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
                 </div>
               </div>
             </div>
-            <!-- DATA -->
-            <div class="data-box">
-              <p class="title">{{ solution.title }}</p>
-              <expanded-text [text]="solution.description" [title]="solution.title">
-              </expanded-text>
-            </div>
-            <div *ngIf="!isFavorites" class="favorites-button">
-              <button mat-icon-button style="background-color: #d9d9d9" color="warn"
-                aria-label="Example icon button with a heart icon" (click)="addFavorites()">
-                <mat-icon>favorite</mat-icon>
-              </button>
-            </div>
-            <div *ngIf="isFavorites" class="favorites-button">
-              <button mat-icon-button color="warn" style="background-color: #e98282"
-                aria-label="Example icon button with a heart icon" (click)="removeFavorites()">
-                <mat-icon>favorite</mat-icon>
-              </button>
-            </div>
-          </mat-card>
+          </div>
+
+          <div class="infohldr">
+            <h3>{{ solution.title }}</h3>
+            <expanded-text [text]="solution.description" [title]="solution.title"></expanded-text>
+          </div>
+
+          <div class="icons">
+            <button type="button" mat-mini-fab color="warn" matTooltip="Agregar a favoritos" matTooltipClass="tooltip"
+              (click)="addFavorites()" *ngIf="!isFavorites">
+              <mat-icon>favorite</mat-icon>
+            </button>
+
+            <button type="button" mat-mini-fab color="accent" matTooltip="Agregar a favoritos" matTooltipClass="tooltip"
+              (click)="removeFavorites()" *ngIf="isFavorites">
+              <mat-icon>favorite</mat-icon>
+            </button>
+
+            <button type="button" mat-mini-fab color="warn" matTooltip="Agregar Comentario" matTooltipClass="tooltip"
+              (click)="popAddCommentsDialog()">
+              <mat-icon>add_comment</mat-icon>
+            </button>
+            <button type="button" mat-mini-fab color="warn" matTooltip="Agregar Testimonio" matTooltipClass="tooltip"
+              (click)="openModalTestimony()">
+              <mat-icon>book</mat-icon>
+            </button>
+          </div>
         </div>
+
         <div class="set-12 mt-2">
-          <mat-card class="doc-description" style="height: 480px; padding: 30px">
-            <div class="set-12 mt-2">
-              <div class="set-6 col-rgt-2" style="padding:40px">
-                <spider-chart [withBorder]="false"></spider-chart>
-              </div>
-              <div class="set-6 col-rgt-2">
-                <circle-chart></circle-chart>
-              </div>
-              <div class="set-6"></div>
+          <div class="set-12 mt-2">
+            <div class="set-6 col-rgt-2" style="padding:40px">
+              <spider-chart [withBorder]="false"></spider-chart>
             </div>
-          </mat-card>
+
+            <div class="set-6 col-rgt-2">
+              <circle-chart></circle-chart>
+            </div>
+
+            <div class="set-6"></div>
+          </div>
         </div>
-      </div>
-      <div class="set-4">
-        <public-documents-testimonials [data]="solution.testimonials"></public-documents-testimonials>
-      </div>
+      </mat-card>
+    </div>
+
+    <div class="set-4">
+      <public-documents-testimonials [data]="solution.testimonials"></public-documents-testimonials>
     </div>
   </div>
 </div>
