--- a/src/styles.scss
+++ b/src/styles.scss
@@ -691,3 +691,36 @@ mat-card {
 .footnote {
   color: #1e7e7f;
 }
+
+.head-titles {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  position: relative;
+
+  * {
+    margin: 0;
+  }
+
+  span {
+    position: relative;
+    background: #ffffff;
+    padding: 10px 20px;
+    background: #00031d;
+    border-radius: 20px;
+    z-index: 7;
+    font-size: 10pt;
+    color: #ffffff;
+  }
+
+  .line {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 3px;
+    width: 100%;
+    background: #00031d;
+    z-index: 4;
+  }
+}
