--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -3,25 +3,23 @@
     <div class="set-4">
       <img src="../../../assets/images/mexicolectivo-full-green.png" (click)="linkMe('home')" />
     </div>
-    <div class="set-9">
-      <input type="text" placeholder="Búscar en Mexicolectivo..." class="bar-search" disabled />
+    <div class="set-8 search-hldr">
+      <input type="text" placeholder="Búscar en Mexicolectivo..." class="bar-search" disabled>
     </div>
   </div>
 
   <div class="set-6 navigation">
-    <button *ngIf="permission == false && isPublic > 0" type="button" class="btn-permissios" (click)="btnPermissions()">
+    <button *ngIf="permission == false && isPublic > 0" type="button" (click)="popPermissionsDialog()">
       Permiso para editar
     </button>
-    <button *ngIf="permission == true && isPublic > 0" type="button" class="btn-permissios" (click)="redirectEdition()">
+    <button *ngIf="permission == true && isPublic > 0" type="button" (click)="redirectEdition()">
       Ir a edición
     </button>
-    <button *ngIf="permission == true && isPublic == -1" type="button" class="btn-permissios"
-      (click)="redirectEdition()">
+    <button *ngIf="permission == true && isPublic == -1" type="button" (click)="redirectEdition()">
       Ver público
     </button>
-
     <button type="button">
-      <span>Pensamiento colectivo</span>
+      Pensamiento colectivo
     </button>
 
     <span class="sep">|</span>
@@ -43,19 +41,16 @@
         }}{{ user.lastname | firstword | firstletter }}
       </span>
     </button>
-
     <button type="button" class="btn-ico" *ngIf="user != null" (click)="linkMe('notifications')"
       matTooltip="Notificaciones" matTooltipClass="tooltip">
       <mat-icon [matBadge]="unreadNotifications" matBadgeColor="warn" *ngIf="unreadNotifications != 0">notifications
       </mat-icon>
       <mat-icon *ngIf="unreadNotifications == 0">notifications</mat-icon>
     </button>
-
     <button type="button" class="btn-ico" *ngIf="user != null" (click)="onSignOut()" matTooltip="Salir"
       matTooltipClass="tooltip">
       <mat-icon>power_settings_new</mat-icon>
     </button>
-
     <button type="button" class="btn-ico" [matMenuTriggerFor]="menu" *ngIf="user != null">
       <mat-icon>more_vert</mat-icon>
     </button>
