--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -220,20 +220,24 @@
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef></th>
               <td mat-cell *matCellDef="let element">
-                <button type="button" mat-icon-button [matMenuTriggerFor]="menu" [disabled]="!element.access">
+                <button type="button" mat-icon-button [matMenuTriggerFor]="menu">
                   <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
-                  <button type="button" mat-menu-item
+                  <button type="button" mat-menu-item [disabled]="!element.access"
                     (click)="linkMe('/documentos-publicos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + element._id)">
                     <mat-icon>groups</mat-icon>
                     <small>Abrir público</small>
                   </button>
-                  <button type="button" mat-menu-item
+                  <button type="button" mat-menu-item [disabled]="!element.access"
                     (click)="linkMe('/documentos/' + document._id + '/categoria/' + selectedCategory._id + '/subcategoria/' + element._id)">
                     <mat-icon>lock</mat-icon>
                     <small>Abrir privado</small>
                   </button>
+                  <!-- <button type="button" mat-menu-item *ngIf="!element.access" (click)="requestPermission(element)">
+                    <mat-icon>vpn_key</mat-icon>
+                    <small>Solicitar permiso</small>
+                  </button> -->
                   <button type="button" mat-menu-item *ngIf="actionControlActivityList.includes(user.activityName)">
                     <mat-icon>settings</mat-icon>
                     <small>Editar</small>
