--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -192,7 +192,7 @@
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Categoría</th>
               <td mat-cell *matCellDef=" let element">
-                <button type="button" class="catbtn" [disabled]="!element.access"
+                <button type="button" class="catbtn"
                   (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element.id)">
                   <mat-icon>question_answer</mat-icon>
                   <small>{{element.name}}</small>
@@ -238,17 +238,19 @@
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef> </th>
               <td mat-cell *matCellDef="let element">
-                <button type="button" mat-icon-button [matMenuTriggerFor]="menu" [disabled]="!element.access">
+                <button type="button" mat-icon-button [matMenuTriggerFor]="menu">
                   <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #menu="matMenu">
                   <button type="button" mat-menu-item
-                    (click)="LinkMe('/documentos-publicos/' + document._id + '/categoria/' + element._id)">
+                    (click)="LinkMe('/documentos-publicos/' + document._id + '/categoria/' + element.id)"
+                    [disabled]="!element.access">
                     <mat-icon>groups</mat-icon>
                     <small>Abrir público</small>
                   </button>
                   <button type="button" mat-menu-item
-                    (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element._id)">
+                    (click)="LinkMe('/documentos/' + document._id + '/categoria/' + element.id)"
+                    [disabled]="!element.access">
                     <mat-icon>lock</mat-icon>
                     <small>Abrir privado</small>
                   </button>
