--- a/src/app/public-documents/category/category.component.scss
+++ b/src/app/public-documents/category/category.component.scss
@@ -54,16 +54,12 @@
   }
 
   .infohldr {
-    padding: 5px 20px;
+    padding: 20px;
   }
 
   .card-title {
     font-weight: 700;
-    font-size: 20px;
-    text-transform: uppercase;
     color: #000000;
-    letter-spacing: 1px;
-    margin-top: 15px;
     margin-bottom: 20px;
   }
 
