--- a/src/app/public-documents/components/category-bars/category-bars.component.scss
+++ b/src/app/public-documents/components/category-bars/category-bars.component.scss
@@ -56,6 +56,7 @@
     }
 
     .catname {
+      width: calc(40% - 70px);
       position: absolute;
       display: flex;
       align-items: center;
