--- a/src/app/public-documents/components/subcategory-bars/subcategory-bars.component.html
+++ b/src/app/public-documents/components/subcategory-bars/subcategory-bars.component.html
@@ -3,20 +3,26 @@
 </div>
 
 <div class="set-12 bars">
-  <div class="set-12 inner-bar" *ngFor="let layout of layouts"
-    [class.active]="layoutSelected != layout._id && layoutSelected != ''">
-    <button type="button" class="linker" matTooltip="Abrir categoría" matTooltipClass="tooltip"
+  <div class="set-12 inner-bar" *ngFor="let layout of layouts">
+    <!-- <button type="button" class="linker" matTooltip="Abrir categoría" matTooltipClass="tooltip"
       matTooltipPosition="left" *ngIf="layoutSelected == layout._id && layoutSelected != ''"
       (click)="linkMe('/documentos-publicos/' + document_id + '/categoria/' + layout._id)">
       <mat-icon>shortcut</mat-icon>
-    </button>
+    </button> -->
+
     <div class="grayback">
       <button type="button" class="fav">
         <mat-icon>favorite</mat-icon>
       </button>
     </div>
-    <div class="gradbar"></div>
-    <button type="button" class="catname" (click)="displayLayoutData(layout)">
+
+    <div class="gradbar" [style.min-width.%]="40" [style.max-width]="'calc(100% - 70px)'"
+      [style.width.%]="layout.stats.score"></div>
+
+    <button type="button" class="catname" (click)="displayLayoutData(layout)" [style.min-width.%]="37"
+      [style.width.%]="layout.stats.score - 3" [matTooltip]="layout.stats.score + '%'" matTooltipClass="tooltip"
+      matTooltipPosition="right"
+      (click)="linkMe('/documentos-publicos/' + document_id + '/categoria/' + category_id + '/subcategoria/' + layout._id)">
       <small>{{ layout.category.name }}</small>
     </button>
   </div>
