--- a/src/app/public-documents/public/public.component.scss
+++ b/src/app/public-documents/public/public.component.scss
@@ -55,17 +55,13 @@
   }
 
   .infohldr {
-    padding: 5px 20px;
+    padding: 20px;
   }
 
   .card-title {
     font-weight: 700;
-    font-size: 20px;
-    text-transform: uppercase;
     color: #000000;
     margin-bottom: 10px;
-    letter-spacing: 1px;
-    margin-top: 15px;
   }
 
   .card-description {
