--- a/src/app/hub/user-notifications/user-notifications.component.html
+++ b/src/app/hub/user-notifications/user-notifications.component.html
@@ -114,6 +114,54 @@
             </div>
           </div>
         </div>
+
+        <div class="set-12" *ngIf="notification.notificationType.name == 'request_permission'">
+          <div class="set-12 notification" [class.unread]="!notification.viewed">
+            <div class="set-2">
+              <div class="avatar">
+                <strong>
+                  <small *ngIf="notification.message_from.avatarImage == null">
+                    {{ notification.message_from.firstname | firstword | firstletter }}{{
+                    notification.message_from.lastname | firstword | firstletter }}
+                  </small>
+                </strong>
+                <img [src]="notification.message_from.avatarImage" alt=""
+                  *ngIf="notification.message_from.avatarImage != null">
+              </div>
+            </div>
+
+            <div class="set-8">
+              <p>
+                <small>{{notification.message}} de: <strong>{{notification.message_from.firstname}}
+                    {{notification.message_from.lastname}}</strong></small>
+              </p>
+              <p>
+                <small>{{notification.createdAt | date: 'mediumDate'}} - {{notification.createdAt | date:
+                  'mediumTime'}}</small>
+              </p>
+            </div>
+
+            <div class="set-2 txt-right">
+              <button mat-icon-button [matMenuTriggerFor]="menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button type="button" mat-menu-item>
+                  <mat-icon>launch</mat-icon>
+                  <span>Abrir</span>
+                </button>
+                <button type="button" mat-menu-item (click)="markNotificationAsRead(notification)">
+                  <mat-icon>mark_email_read</mat-icon>
+                  <span>Marcar como leído</span>
+                </button>
+                <button type="button" mat-menu-item (click)="killNotification(notification)">
+                  <mat-icon>delete</mat-icon>
+                  <span>Eliminar</span>
+                </button>
+              </mat-menu>
+            </div>
+          </div>
+        </div>
       </div>
     </mat-card>
   </div>
